--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,12 @@
 Options All -Indexes
 RewriteEngine On
 RewriteRule  ^([-a-zA-Z0-9]+)$ index.php?ruta=$1
+
+ServerSignature Off
+IndexIgnore *
+
+<FilesMatch "^\.">
+Order allow,deny
+Deny from all
+</FilesMatch>
+RewriteRule ^(.*)/vendor/.*\.(php|rb|py)$ - [F,L,NC]
