--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "crocodicstudio/crudbooster": "6.0-beta.1",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "phpmailer/phpmailer": "^6.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
