--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,14 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
-        "crocodicstudio/crudbooster": "6.0-beta.1",
+       
+	   "php": "^7.1.3",
+         "ckeditor/ckeditor": "4.*",
+		"crocodicstudio/crudbooster": "6.0-beta.1",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "league/oauth2-google": "^3.0",
         "phpmailer/phpmailer": "^6.1"
     },
     "require-dev": {
