--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,15 @@
     ],
     "license": "MIT",
     "require": {
-       
-	   "php": "^7.1.3",
-         "ckeditor/ckeditor": "4.*",
-		"crocodicstudio/crudbooster": "6.0-beta.1",
+        "php": "^7.1.3",
+        "ckeditor/ckeditor": "4.*",
+        "crocodicstudio/crudbooster": "6.0-beta.1",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "league/oauth2-google": "^3.0",
-        "phpmailer/phpmailer": "^6.1"
+        "phpmailer/phpmailer": "^6.1",
+        "phpoffice/phpspreadsheet": "^1.11"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
